--- a/Python Code.ipynb
+++ b/Python Code.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b8ab992a-3437-4b3a-abc6-1ff52803363b",
+   "metadata": {},
+   "source": [
+    "# Collaborative Filtering Recommendation System\n",
+    "## Hyun Ko, Eric Tria, Chunru Zheng"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6c419776-bdc9-4109-90bf-6f9107d6fdb0",
+   "id": "97b66b89-a19c-437d-a006-911744326826",
    "metadata": {},
    "outputs": [],
    "source": [
